--- a/BlackCoinMultipool.UI.WindowsPhone/Views/DonationView.xaml
+++ b/BlackCoinMultipool.UI.WindowsPhone/Views/DonationView.xaml
@@ -14,33 +14,41 @@
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
-    <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
 
-        <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="{Binding Path=LocalizedResources.PageDonate, Source={StaticResource LocalizedStrings}}" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
-        </StackPanel>
+    <phone:Panorama Title="{Binding Path=LocalizedResources.PageDonate, Source={StaticResource LocalizedStrings}}">
+        <phone:PanoramaItem Header="{Binding Path=LocalizedResources.PageDonateBlackcoin, Source={StaticResource LocalizedStrings}}">
+            <Grid x:Name="ContentPanel" Grid.Row="1" Margin="14,0,10,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="155"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="*"/>
 
-        <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="14,0,10,0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="125"/>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="75"/>
-                <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="{Binding Path=LocalizedResources.DonateTextBlackcoin, Source={StaticResource LocalizedStrings}}" Style="{StaticResource PhoneTextNormalStyle}" TextWrapping="Wrap"/>
+                <TextBlock Grid.Row="1" Text="{Binding DonationAddressBlackcoin}" Style="{StaticResource PhoneTextNormalStyle}" Margin="0" />
+                <Button Grid.Row="2" Content="{Binding Path=LocalizedResources.DonateCopyToClipboard, Source={StaticResource LocalizedStrings}}" Command="{Binding CopyToClipboardBlackcoinCommand}" />
+                <!--<Image Grid.Row="3" Margin="0" Source="/Assets/donate_qrcode.png" />-->
+            </Grid>
+        </phone:PanoramaItem>
+        <phone:PanoramaItem Header="{Binding Path=LocalizedResources.PageDonateBitcoin, Source={StaticResource LocalizedStrings}}">
 
-            </Grid.RowDefinitions>
-            <TextBlock Text="{Binding Path=LocalizedResources.DonateText, Source={StaticResource LocalizedStrings}}" Style="{StaticResource PhoneTextNormalStyle}" TextWrapping="Wrap"/>
-            <TextBlock Grid.Row="1" Text="{Binding DonationAddress}" Style="{StaticResource PhoneTextNormalStyle}" />
-            <Button Grid.Row="2" Content="{Binding Path=LocalizedResources.DonateCopyToClipboard, Source={StaticResource LocalizedStrings}}" Command="{Binding CopyToClipboardCommand}" />
-            <Image Grid.Row="3" Margin="15" Source="/Assets/donate_qrcode.png" />
-        </Grid>
-    </Grid>
+            <Grid Grid.Row="1" Margin="14,0,10,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="135"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="*"/>
+
+                </Grid.RowDefinitions>
+                <TextBlock Text="{Binding Path=LocalizedResources.DonateTextBitcoin, Source={StaticResource LocalizedStrings}}" Style="{StaticResource PhoneTextNormalStyle}" TextWrapping="Wrap"/>
+                <TextBlock Grid.Row="1" Text="{Binding DonationAddressBitcoin}" Style="{StaticResource PhoneTextNormalStyle}" Margin="0" />
+                <Button Grid.Row="2" Content="{Binding Path=LocalizedResources.DonateCopyToClipboard, Source={StaticResource LocalizedStrings}}" Command="{Binding CopyToClipboardBitcoinCommand}" />
+                <!--<Image Grid.Row="3" Margin="0" Source="/Assets/donate_qrcode_bitcoin.png" />-->
+            </Grid>
+        </phone:PanoramaItem>
+    </phone:Panorama>
+
+
 
 </views:MvxPhonePage>
