--- a/BlackCoinMultipool.UI.Android/Resources/Layout/DonateBitcoinFragment.axml
+++ b/BlackCoinMultipool.UI.Android/Resources/Layout/DonateBitcoinFragment.axml
@@ -3,27 +3,35 @@
     xmlns:local="http://schemas.android.com/apk/res/nl.auspex.blackcoinpool"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:minWidth="25px"
+    android:minHeight="25px">
     <TextView
-        android:text="@string/SettingsCurrentlySetAddress"
+        android:text="@string/DonateTextBitcoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:id="@+id/textView_settings_currentlysetaddress" />
+        android:id="@+id/textView_donation_text" />
     <TextView
         android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView_settings_address"
+        android:id="@+id/textView_donation_bitcoin_address"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        local:MvxBind="Text BitcoinAddress"
+        local:MvxBind="Text DonationAddressBitcoin"
         android:textStyle="bold" />
     <Button
-        android:text="@string/SettingsChangeAddress"
+        android:text="@string/DonateCopyToClipboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button_settings_clear"
+        android:id="@+id/button_donation_bitcoin_button"
         android:layout_margin="20dp"
-        local:MvxBind="Click ClearAddressCommand" />
+        local:MvxBind="Click CopyToClipboardCommand" />
+    <ImageView
+        android:src="@drawable/donate_qrcode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:id="@+id/imageView1" />
 </LinearLayout>
