--- a/BlackCoinMultipool.UI.Android/Resources/Layout/GettingStartedAutomaticFragment.axml
+++ b/BlackCoinMultipool.UI.Android/Resources/Layout/GettingStartedAutomaticFragment.axml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:local="http://schemas.android.com/apk/res/BlackCoinMultipool.UI.Android"
+    xmlns:local="http://schemas.android.com/apk/res/nl.auspex.blackcoinpool"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
