--- a/BlackCoinMultipool.UI.Android/Resources/Layout/StatisticsHashrateFragment.axml
+++ b/BlackCoinMultipool.UI.Android/Resources/Layout/StatisticsHashrateFragment.axml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res/nl.auspex.blackcoinpool"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-
+    <BlackCoinMultipool.UI.Android.Views.Controls.GaugeView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="10dp"
+        local:gaugeBackground="#404040"
+        local:gaugeForeground="#ffbb33"
+        local:background="@android:color/transparent"
+        local:textColor="@android:color/white"
+        local:value="50.0"
+        local:maxValue="10.0"
+        local:unit="MH/s"
+        local:MvxBind="Value CurrentHashrateScrypt" />
 </LinearLayout>
