--- a/BlackCoinMultipool.UI.Android/Resources/Layout/StatisticsShiftsFragment.axml
+++ b/BlackCoinMultipool.UI.Android/Resources/Layout/StatisticsShiftsFragment.axml
@@ -1,7 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res/nl.auspex.blackcoinpool"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
+    android:layout_height="fill_parent"
+    android:padding="15dp">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="@string/ShiftsTimestamp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:layout_weight="3" />
+        <TextView
+            android:text="@string/ShiftsProfitability"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:layout_weight="1" />
+        <TextView
+            android:text="@string/ShiftsPayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:gravity="left"
+            android:layout_weight="1" />
+    </LinearLayout>
+    <Mvx.MvxListView
+        android:layout_marginTop="10dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        local:MvxBind="ItemsSource Shifts"
+        local:MvxItemTemplate="@layout/shift_listviewitem" />
 </LinearLayout>
