--- a/BlackCoinMultipool.UI.Android/Resources/Layout-port/SplashScreen.axml
+++ b/BlackCoinMultipool.UI.Android/Resources/Layout-port/SplashScreen.axml
@@ -8,9 +8,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Loading...." />-->
-    <ProgressBar
+<!--<ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@android:style/Widget.Holo.ProgressBar"
-        android:layout_marginTop="150dp" />
+        android:layout_marginTop="150dp" />-->
 </LinearLayout>
