--- a/BlackCoinMultipool.UI.Android/Resources/Layout/GettingStartedAutomaticFragment.axml
+++ b/BlackCoinMultipool.UI.Android/Resources/Layout/GettingStartedAutomaticFragment.axml
@@ -26,7 +26,7 @@
         android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal"
         android:id="@+id/textViewHelp"
-        android:textColor="#e02222"
+        android:textColor="@color/blackcointheme_color"
         android:background="@android:color/transparent"
         local:MvxBind="Click QRCodeHelpCommand" />
 </LinearLayout>
