--- a/BlackCoinMultipool.UI.Android/Resources/Layout/StatisticsSha256HashrateFragment.axml
+++ b/BlackCoinMultipool.UI.Android/Resources/Layout/StatisticsSha256HashrateFragment.axml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res/nl.auspex.blackcoinpool"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" />
+    android:layout_height="fill_parent">
+    <BlackCoinMultipool.UI.Android.Views.Controls.GaugeView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="10dp"
+        local:gaugeBackground="#404040"
+        local:gaugeForeground="@color/blackcointheme_color"
+        local:background="@android:color/transparent"
+        local:textColor="@android:color/white"
+        local:value="0.0"
+        local:maxValue="10.0"
+        local:unit="@string/THashPerSecond"
+        local:MvxBind="Value CurrentHashrateSha256" />
+</LinearLayout>
